css/style.css
.visually-hidden,
.visually-hidden-focusable:not(:focus):not(:focus-within) {
    position: absolute !important;
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    margin: -1px !important;
    overflow: hidden !important;
    clip: rect(0, 0, 0, 0) !important;
    white-space: nowrap !important;
    border: 0 !important;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 90%;
    margin: auto;
}

#product-list {
    width: 90%;
    margin: auto;
}

h1 {
    padding-top: 0.7em;
}

h2 {
    font-weight: 300;
    margin: 10px;
    text-align: center;
    color: #16001e;
}

img {
    vertical-align: top;
}

.product-card {
    background-color: rgb(243 206 199 / 70%);
    width: 100%;
    border-radius: 2em;
    box-shadow: 3px 3px 3px 3px rgb(0 0 0 / 10%);
    text-align: center;
    margin-top: 1em;
    padding-bottom: 2em;
}

.card-content {
    width: 280px;
    margin: auto;
    text-align: center;
    margin-top: 0.5em;
}

.card-content p {
    color: #8d524b;
    font-weight: bold;
    font-size: 1em;
}

.product-card a {
    background-color: #16001e;
    color: #f3cec7;
    border: none;
    text-align: center;
    border-radius: 1em;
    text-decoration: none;
    padding: 10px;
    font-size: 1.2em;
}

header div h1 a{
    height: 80px;
    width: 140px;
    margin: auto;
    font-size: 0 !important;
    display: block;
    background: no-repeat url(../res/logo.png);
}

.navbar li {
    list-style: none;
}

#menu li{
    margin-left: 1em;
    display: inline-block;
    color: #16001e;
}

#menu li a{
    color: #16001e;
    font-size: 1em;
    text-decoration: none;
}

#menu li a:hover {
    color: #8d524b;
}

.product-card picture img {
    margin-top: 1.5em;
}

#open-close {
    display: none;
}

.card-content p, h3{
    font-weight: 400;
}

/* .see-more {
    background-color: #16001e;
    color: #f3cec7;
    width: 40%;
    border-radius: 5px;
    border: none;
    margin-bottom: 2em;
    text-decoration: none;
} */

.see-more:hover, form button:hover {
    background-color: #8d524b !important;
    color: #f3cec7 !important;
}

.product-details {
    display: flex;
    text-align: center;
    margin-top: 70px;
    margin-bottom: 75px;
}

.prod-details {
    text-align: left;
    width: 46%;
}

.prod-details h2 {
    text-align: left;
    margin-left: 0;
}

.img-prod {
    text-align: center;
    width: 50%;
}

.error {
    text-align: center;
}

.error a{
    text-decoration: none;
    color: #8d524b;
}

.error a:hover {
    color: #f3cec7;
}

.gracias {
    text-align: center;
}

.gracias a{
    color: #8d524b;
    text-decoration: none;
}

.gracias a:hover {
    color: #f3cec7;
}

.container_home {
    text-align: center;
    margin-top: 2em;
}

picture {
    vertical-align: top;
}

.about {
    display: inline-block;
    width: 50%;
}

.about p{
    font-size: 1em;
    color: #8d524b;
    text-align: left;
}

footer {
    text-align: center;
    padding: 2em;
    margin-top: 2em;
    color: #f3cec7;
    background-color: #8d524b;
}

form {
    background-color: rgb(243 206 199 / 30%);
    border-radius: 5px;
    padding: 3em;
    margin: auto;
    max-width: 80%;
    margin-top: 1em;
}

legend {
    text-align: center;
    padding-bottom: 1em;
    font-size: 1.3em;
}

.form-button {
    float: right;
    margin-top: 1em;
}

@media screen and (min-width: 1400px) {
    .about p{
        width: 80%;
    }
}

@media screen and (max-width: 768px) {
    .product-details {
        display: unset;
    }   
    .prod-details {
        width: 100%;
        text-align: center;    
    }
    .img-prod {
        width: 100%;
        display: inline-block;
        margin-top: 2em;
        margin-bottom: 1em;
    }
    .product-details h2 {
        text-align: center;
    }

    .about {
        width: 100%;
    }

    form{
        max-width: 100vw !important;
    }

    #open-close {
        display: block;
    }

    #open-close li{
        position: absolute;
        top: 0;
        right: 0;
    }
    
    #open-close li a {
        background: url(../res/menu.png) no-repeat;
        background-size: cover;
        display: inline-block;
        margin: 10px 20px;
        font-size: 0;
        width: 30px;
        height: 30px;
    }

    #menu {
        position: absolute;
        top: 8vh;
        right: 1em;
        padding: 1em;
        background-color: #f3cec7;
        z-index: 100;
        display: none;
        width: 160px;
        height: 115px;
    }

    .close {
        display: none;
    }


    #nav:target .close {
        display: block;
    }

    #nav:target .open {
        display: none;
    }

    #nav:target #menu {
        display: block;
    }

    #menu li{
        display: block;
        margin-left: 0;
        margin-bottom: 0.5em;
    }
    
}

